# ZeKin

./: .env.example  .gitignore  AI思政辅助APP三端整体实现方案.md  AI思政辅助APP学生端导航与个人档案调整方案.md  AI思政辅助APP教师端页面设计方案.md  AI思政辅助APP管理员端Web页面设计方案.md  README.md  TODO.md  docker-compose.yml  justfile  实训-知勤打卡系统-72小时MVP需求精简与里程碑报告.docx  实训-知勤打卡系统-WBS任务分解表.xlsx  氛围编程_14章完整教程.html
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/versions/: 0001_initial_schema.py  0002_add_recurring_and_daily_report.py  0003_composable_checkin_methods.py  0004_checkin_task_occurrences.py  0005_manual_attendance.py  0006_group_invite_code.py  0007_student_dormitory_location.py  0008_student_internship_location.py  0009_scheduled_publish_at.py
backend/app/: main.py  models.py  schemas.py
backend/app/core/: cache.py  config.py  database.py  logging.py  schema_patch.py  security.py
backend/app/middleware/: request_logger.py
backend/app/modules/: __init__.py  all_models.py  seed.py
backend/app/routers/: admin.py  auth.py  checkins.py  stats.py  teacher.py
backend/app/shared/: attendance.py  datetime_utils.py  enums.py  response.py  student_default_locations.py
backend/scripts/: verify_amap_geocode.py
backend/tests/: conftest.py  test_health.py  test_mvp_api.py
backend/tests/integration/: test_admin_analytics.py  test_admin_face_register_checkin.py  test_admin_scenario_analytics.py  test_checkin_flow.py  test_face_checkin_flow.py  test_group_invite_flow.py  test_publish_notify_occurrence.py  test_qr_checkin_flow.py  test_register_flow.py  test_relationship_fields.py  (+2 more)
(+437 files in other folders)
